* Clarified recon approval workflow (Chris T)
* Fixed error editing non-existent localized template (Chris T, 3531738)
* Fixed show/hide logic on nav bar on Contacts screen (Chris T)
* Fixed "Post as Shown" button not showing properly on AR/AP drafts (Chris T)
* Added fs_cssdir config option for easier packaging (Chris T, h/t Robert C)

Changelog for 1.3.18
* Fixed missing template for CSV pricelists (Chris T)
* Added ODS pricelists (Chris T)
* Better CSV escaping (Chris T, h/t Erik H)
* Fixed menu errors preventing quote/rfq template editing (Chris T, 3524793)
* Fixed customer email not showing emailing statements (Chris T and Erik H)
* Approved recon reports no longer show invalid balance info (Chris T,3518283)
* CSS directory is now configurable (Chris T, 3516730, h/t Robert C)
* Corrected cannot delete accounts (Chris T, 3529383, h/t David M)
* Fixed ODS output broken due to missing export (Chris T)
* Fixed button disable inverted (Chris T)
* Fixed internal server error on requirements report (Chris T, h/t Nigel T)
* Fixed formatting issues with long dates and ISO db dates (Chris T 3525843)
* Removing XLS support which has been broken for some time (Chris T)
* Fixes for slow menu performance on menu (Chris T)

Chris T is Chris Travers
David M is David Mora
Erik H is Erik Huelsmann
Nigel T is Nigel Titley
Robert C is Robert James Clay


Changelog for 1.3.17
* Address now shows on ECA selection screen (Erik H)
* Taxes::Simple now respects min/max values based on subtotal (Chris T)
* Fixed company name/address missing from income statement (Chris T, h/t Mark L)
* Fixed company name/address missing from balance sheet (Chris T, h/t Mark L)
* Optional image retrieval with size detection for latex templates (Chris T)
* Added option to attach images to LaTeX PDF invoices/orders/etc (Chris T)
* Corrected one is_zero error with latest Math::BigInt (Chris T)
* Fixed file uploads sometimes hanging (Chris T)